# Master-Thesis-2024

./: .gitignore  July_Notebook.ipynb  ProjectTreeStructure  README.md  hpc_requirements.txt  pyproject.toml  sync_to_hpc.sh
Pipeline/dvc/: chmod_all.sh  dvc_job.txt  params.yaml  run_pipeline.pbs  run_pipeline.py
Pipeline/pipeline_scripts/: 1_generate_model.py  2_vqe_script.py  3_compare_derivative_prices.py  4_vqe_script_for_lp_funcs.py
lib/: alg.py  config.py  new_model.py  options_functions.py  utils.py  vqe.py
result_app/: config.toml  main.py
result_app/_pages/: page1.py  page2.py  page3.py  page4.py  page5.py  page6.py  page7.py  page8.py
test/: test_alg.py  test_model.py  test_utils.py
